# autoware_core

./: .clang-tidy-ci  .cppcheck_suppressions  packages_above.repos
.github/workflows/: build-and-test-reusable.yaml  build-and-test.yaml  cppcheck-weekly.yaml
common/autoware_motion_utils/: package.xml
common/autoware_qp_interface/src/: osqp_interface.cpp  qp_interface.cpp
common/autoware_qp_interface/test/: test_osqp_interface.cpp  test_qp_interface.cpp
common/autoware_trajectory/: CMakeLists.txt
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
latest/common/autoware_component_interface_specs/: index.html
latest/common/autoware_geography_utils/: index.html
latest/common/autoware_interpolation/: index.html
latest/common/autoware_kalman_filter/: index.html
latest/common/autoware_motion_utils/: index.html
latest/common/autoware_node/: index.html
latest/common/autoware_point_types/: index.html
latest/common/autoware_trajectory/: index.html
latest/common/autoware_vehicle_info_utils/: index.html
latest/search/: search_index.json
localization/autoware_ekf_localizer/: package.xml
main/: sitemap.xml
sensing/autoware_downsample_filters/: CMakeLists.txt  package.xml
sensing/autoware_vehicle_velocity_converter/: CMakeLists.txt
sensing/autoware_vehicle_velocity_converter/src/: vehicle_velocity_converter.cpp  vehicle_velocity_converter.hpp
sensing/autoware_vehicle_velocity_converter/test/: test_vehicle_velocity_converter.cpp
(+29 files in other folders)
